--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ DISCORD_WEBHOOK=your_discord_webhook_url_here
 WORKING_DIRECTORY=/home/ubuntu/fujinetGameAlerts
 DEBUG=False
 PORT=5100
+DATABASE=gameEvents.db
