--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ WORKING_DIRECTORY=/home/ubuntu/fujinetGameAlerts
 DEBUG=False
 PORT=5100
 DATABASE=gameEvents.db
+
+# Web UI Configuration
+FA_SECRET_KEY=your_flask_secret_key_here
