--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ requests==2.31.0
 Werkzeug==3.0.1
 gunicorn==21.2.0
 APScheduler==3.10.4 # Added for scheduled tasks
+Flask-WTF==1.2.1 # For forms and CSRF protection in gasui.py
+WTForms==3.1.0 # Form handling for gasui.py
